sped up anz pom count